--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     },
     "dependencies": {
         "@ijprest/kle-serial": "^0.15.1",
+        "@types/color": "^3.0.1",
         "@types/glob": "^7.1.3",
-        "canvas": "^2.7.0",
+        "color": "^3.1.3",
         "glob": "^7.1.7",
         "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
