--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "gen": "ts-node gen.ts",
+        "gen": "nodemon --exec ts-node gen.ts",
         "fmt": "prettier --list-different --write --ignore-path .gitignore \"**/*.{js,ts,tsx,html,md}\""
     },
     "dependencies": {
@@ -9,6 +9,7 @@
         "@types/glob": "^7.1.3",
         "color": "^3.1.3",
         "glob": "^7.1.7",
+        "nodemon": "^2.0.7",
         "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
